Gnome: Fix flickering above Chrome URL bar

--- a/gtk-3.20/gtk-dark.css
+++ b/gtk-3.20/gtk-dark.css
@@ -340,6 +340,7 @@ button {
   outline-color: rgba(195, 199, 209, 0.3);
   background-color: #1E282C;
   text-shadow: none;
+  border: 1px solid #1E282C;
   box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.1), inset 0px -1px 0px 0px rgba(0, 0, 0, 0.1); }
   notebook > header > tabs > arrow,
   button.flat {
@@ -363,6 +364,7 @@ button {
     outline-color: rgba(248, 248, 242, 0.3);
     background-color: #FF512F;
     text-shadow: none;
+    border: 1px solid #FF512F;
     box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.1), inset 0px -1px 0px 0px rgba(0, 0, 0, 0.1);
     -gtk-icon-effect: highlight; }
   notebook > header > tabs > arrow:active, notebook > header > tabs > arrow:checked,
@@ -659,6 +661,7 @@ button.suggested-action {
   outline-color: rgba(255, 255, 255, 0.3);
   background-color: #66D7D1;
   text-shadow: none;
+  border: 1px solid #66D7D1;
   box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.1), inset 0px -1px 0px 0px rgba(0, 0, 0, 0.1); }
   button.suggested-action.flat {
     border-color: transparent;
@@ -673,6 +676,7 @@ button.suggested-action {
     outline-color: rgba(255, 255, 255, 0.3);
     background-color: #66D7D1;
     text-shadow: none;
+    border: 1px solid #66D7D1;
     box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.1), inset 0px -1px 0px 0px rgba(0, 0, 0, 0.1); }
   button.suggested-action:active, button.suggested-action:checked {
     color: white;
@@ -783,6 +787,7 @@ button.destructive-action {
   outline-color: rgba(255, 255, 255, 0.3);
   background-color: #e01431;
   text-shadow: none;
+  border: 1px solid #e01431;
   box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.1), inset 0px -1px 0px 0px rgba(0, 0, 0, 0.1); }
   button.destructive-action.flat {
     border-color: transparent;
@@ -797,6 +802,7 @@ button.destructive-action {
     outline-color: rgba(255, 255, 255, 0.3);
     background-color: #e01431;
     text-shadow: none;
+    border: 1px solid #e01431;
     box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.1), inset 0px -1px 0px 0px rgba(0, 0, 0, 0.1); }
   button.destructive-action:active, button.destructive-action:checked {
     color: white;
@@ -948,6 +954,7 @@ toolbar button:hover {
   outline-color: rgba(195, 199, 209, 0.3);
   background-color: #101517;
   text-shadow: none;
+  border: 1px solid #101517;
   box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.1), inset 0px -1px 0px 0px rgba(0, 0, 0, 0.1); }
 toolbar button:active {
   font-weight: bold;
@@ -955,6 +962,7 @@ toolbar button:active {
   outline-color: rgba(195, 199, 209, 0.3);
   background-color: #050708;
   text-shadow: none;
+  border: 1px solid #050708;
   box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.1), inset 0px -1px 0px 0px rgba(0, 0, 0, 0.1); }
 
 .inline-toolbar toolbutton > button {
@@ -1590,12 +1598,14 @@ colorswatch#add-color-button {
     outline-color: rgba(195, 199, 209, 0.3);
     background-color: #1E282C;
     text-shadow: none;
+    border: 1px solid #1E282C;
     box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.1), inset 0px -1px 0px 0px rgba(0, 0, 0, 0.1); }
     colorswatch#add-color-button overlay:hover {
       color: #C3C7D1;
       outline-color: rgba(195, 199, 209, 0.3);
       background-color: #1E282C;
       text-shadow: none;
+      border: 1px solid #1E282C;
       box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.1), inset 0px -1px 0px 0px rgba(0, 0, 0, 0.1); }
     colorswatch#add-color-button overlay:backdrop {
       color: #a2a8b1;
@@ -2349,6 +2359,7 @@ GraniteWidgetsWelcome {
       outline-color: rgba(255, 255, 255, 0.3);
       background-color: #66D7D1;
       text-shadow: none;
+      border: 1px solid #66D7D1;
       box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.1), inset 0px -1px 0px 0px rgba(0, 0, 0, 0.1); }
       .titlebar:not(headerbar) button.suggested-action:hover,
       headerbar button.suggested-action:hover {
@@ -2356,6 +2367,7 @@ GraniteWidgetsWelcome {
         outline-color: rgba(255, 255, 255, 0.3);
         background-color: #66D7D1;
         text-shadow: none;
+        border: 1px solid #66D7D1;
         box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.1), inset 0px -1px 0px 0px rgba(0, 0, 0, 0.1); }
       .titlebar:not(headerbar) button.suggested-action:active,
       headerbar button.suggested-action:active {
@@ -2401,6 +2413,7 @@ GraniteWidgetsWelcome {
       outline-color: rgba(255, 255, 255, 0.3);
       background-color: #e01431;
       text-shadow: none;
+      border: 1px solid #e01431;
       box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.1), inset 0px -1px 0px 0px rgba(0, 0, 0, 0.1); }
       .titlebar:not(headerbar) button.destructive-action:hover,
       headerbar button.destructive-action:hover {
@@ -2408,6 +2421,7 @@ GraniteWidgetsWelcome {
         outline-color: rgba(255, 255, 255, 0.3);
         background-color: #e01431;
         text-shadow: none;
+        border: 1px solid #e01431;
         box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.1), inset 0px -1px 0px 0px rgba(0, 0, 0, 0.1); }
       .titlebar:not(headerbar) button.destructive-action:active,
       headerbar button.destructive-action:active {
@@ -2483,6 +2497,7 @@ GraniteWidgetsWelcome {
       outline-color: rgba(248, 248, 242, 0.3);
       background-color: #FF512F;
       text-shadow: none;
+      border: 1px solid #FF512F;
       box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.1), inset 0px -1px 0px 0px rgba(0, 0, 0, 0.1); }
       .selection-mode.titlebar:not(headerbar) button.flat,
       headerbar.selection-mode button.flat {
@@ -2498,6 +2513,7 @@ GraniteWidgetsWelcome {
         outline-color: rgba(248, 248, 242, 0.3);
         background-color: #FF512F;
         text-shadow: none;
+        border: 1px solid #FF512F;
         box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.1), inset 0px -1px 0px 0px rgba(0, 0, 0, 0.1); }
       .selection-mode.titlebar:not(headerbar) button:active, .selection-mode.titlebar:not(headerbar) button:checked,
       headerbar.selection-mode button:active,
@@ -2590,6 +2606,7 @@ GraniteWidgetsWelcome {
         outline-color: rgba(255, 255, 255, 0.3);
         background-color: #66D7D1;
         text-shadow: none;
+        border: 1px solid #66D7D1;
         box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.1), inset 0px -1px 0px 0px rgba(0, 0, 0, 0.1); }
         .selection-mode.titlebar:not(headerbar) button.suggested-action:hover,
         headerbar.selection-mode button.suggested-action:hover {
@@ -2597,6 +2614,7 @@ GraniteWidgetsWelcome {
           outline-color: rgba(255, 255, 255, 0.3);
           background-color: #66D7D1;
           text-shadow: none;
+          border: 1px solid #66D7D1;
           box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.1), inset 0px -1px 0px 0px rgba(0, 0, 0, 0.1); }
         .selection-mode.titlebar:not(headerbar) button.suggested-action:active,
         headerbar.selection-mode button.suggested-action:active {
@@ -6123,12 +6141,14 @@ ConversationListView {
   outline-color: rgba(195, 199, 209, 0.3);
   background-color: #1E282C;
   text-shadow: none;
+  border: 1px solid #1E282C;
   box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.1), inset 0px -1px 0px 0px rgba(0, 0, 0, 0.1); }
   #content_frame button:hover {
     color: #C3C7D1;
     outline-color: rgba(195, 199, 209, 0.3);
     background-color: #1E282C;
     text-shadow: none;
+    border: 1px solid #1E282C;
     box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.1), inset 0px -1px 0px 0px rgba(0, 0, 0, 0.1); }
   #content_frame button:active, #content_frame button:checked {
     color: #C3C7D1;
